Create images dir and adds image to recipe lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <p>
+        <img src="../Images/lasagne-1280.jpg" alt="Picture of lasagne">
+    </p>
 </body>
 </html>
